# tap-canny

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yaml  build.yml  constraints.txt  test.yaml  test.yml
tap_canny/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: conftest.py  test_core.py
