[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling==1.27",
]

[project]
name = "tap-canny"
version = "0.0.1"
description = "Singer tap for Canny, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Canny",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests~=2.32.0",
  "singer-sdk~=0.45.3",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-canny#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-canny"
urls.Source = "https://github.com/edgarrmondragon/tap-canny"
scripts."tap-canny" = "tap_canny.tap:TapCanny.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest~=8.0",
  "singer-sdk[testing]",
]
typing = [
  "mypy~=1.15.0",
  "types-requests~=2.32.0",
]

[tool.ruff]
line-length = 88
src = [
  "tap_canny",
  "tests",
]

lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
]
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "COM812", # missing-trailing-comma
  "ISC001", # single-line-implicit-string-concatenation
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.isort.known-first-party = [
  "tap_canny",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
tap-canny = "tap_canny"
types-requests = "types_requests"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "deptry",
  "mypy",
  "pytest",
  "types-requests",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-vvv"
filterwarnings = [
  "error",
  "default:No records were available to test:UserWarning",
  "default:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]
xfail_strict = true

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "backoff.*",
]

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.5.19"
