[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling==1.29",
]

[project]
name = "tap-canny"
version = "0.0.1"
description = "Singer tap for Canny, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Canny",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
"tap-canny" = "tap_canny.tap:TapCanny.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-canny#readme"
Homepage = "https://github.com/reservoir-data/tap-canny"
Source = "https://github.com/reservoir-data/tap-canny"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest~=9.0",
  "singer-sdk[testing]",
]
typing = [
  "mypy~=1.19.0",
  "ty>=0.0.8",
  "types-requests~=2.32.0",
]

[tool.uv]
required-version = ">=0.5.19"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
src = [
  "tap_canny",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "COM812", # missing-trailing-comma
  "ISC001", # single-line-implicit-string-concatenation
  "S101",   # assert
  "SLF001", # private-member-access
]
isort.known-first-party = [
  "tap_canny",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry]
[tool.deptry.package_module_name_map]
mypy = "mypy"
tap-canny = "tap_canny"
types-requests = "types_requests"
[tool.deptry.per_rule_ignores]
DEP002 = [
  "deptry",
  "mypy",
  "pytest",
  "types-requests",
]

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-vvv",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "default:No records were available to test:UserWarning",
  "default:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
min_version = "4.22"
requires = [
  # renovate: datasource=pypi depName=tox
  "tox~=4.22",
  # renovate: datasource=pypi depName=tox-uv
  "tox-uv~=1.17",
]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env]
dependencies.dependency_groups = [ "testing" ]
dependencies.commands = [ [ "deptry", "." ] ]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_canny", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_canny", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_CANNY_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
